--- a/Dissertacia/MyWork/Files/MatlabModeling/dll/dll/V_0/PackagingLog.html
+++ b/Dissertacia/MyWork/Files/MatlabModeling/dll/dll/V_0/PackagingLog.html
@@ -1,5 +1,5 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -W 'dotnet:CalcFunction_v_0,CalcFunctionClass,4.0,private' -T link:lib -d C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0 -v class{CalcFunctionClass:C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\CalcFunction_v_0.m} </font>
+<font color=blue>mcc -W 'dotnet:CalcFunction_v_1,CalcFunctionClass,4.0,private' -T link:lib -d C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0 -v class{CalcFunctionClass:C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\Second_step\CalcFunction_v_1.m} </font>
 Compiler version: 6.4 (R2017a)
 
 Dependency analysis by REQUIREMENTS.
@@ -10,17 +10,17 @@ file. Use the MATLAB function "isdeployed" in your MATLAB startup file to
 determine the appropriate execution environment when including file and folder
 paths, and recompile your application.
 ] 
-Parsing file "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\CalcFunction_v_0.m"
+Parsing file "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\Second_step\CalcFunction_v_1.m"
 	(Referenced from: "Compiler Command Line").
 Deleting 0 temporary MEX authorization files.
 Generating file "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClassNative.cs".
 Generating file "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClass.cs".
 Generating file "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\readme.txt".
-Executing command: C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe /nologo /optimize /doc:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0.xml" /t:library /r:"C:\Program Files\MATLAB\R2017a\toolbox\dotnetbuilder\bin\win64\v4.0\MWArray.dll" /resource:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0.ctf" /out:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0.dll" "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClass.cs"
-Executing command: C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe /nologo /optimize /doc:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0Native.xml" /t:library /r:"C:\Program Files\MATLAB\R2017a\toolbox\dotnetbuilder\bin\win64\v4.0\MWArray.dll" /resource:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0.ctf" /out:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_0Native.dll" "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClassNative.cs"
+Executing command: C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe /nologo /optimize /doc:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1.xml" /t:library /r:"C:\Program Files\MATLAB\R2017a\toolbox\dotnetbuilder\bin\win64\v4.0\MWArray.dll" /resource:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1.ctf" /out:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1.dll" "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClass.cs"
+Executing command: C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe /nologo /optimize /doc:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1Native.xml" /t:library /r:"C:\Program Files\MATLAB\R2017a\toolbox\dotnetbuilder\bin\win64\v4.0\MWArray.dll" /resource:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1.ctf" /out:"C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunction_v_1Native.dll" "C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\CalcFunctionClassNative.cs"
 <font color=blue>Packaging...</font>
 Creating the bundle...
 Web based installer created at C:\Users\Vasilii\Documents\MyWorks\trunk\Dissertacia\MyWork\Files\MatlabModeling\dll\dll\V_0\MyAppInstaller_web.exe.
 Packaging complete.
-Elapsed packaging time was: 55 seconds.
+Elapsed packaging time was: 48 seconds.
 </pre></html>
